--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   google_fonts: ^7.1.0
   flutter_svg: ^2.0.9
   intl: ^0.20.2
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  url_launcher: ^6.3.2
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
