feat: Implement "petani" role support, translate worker types, and update package names across frontend and backend.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ojekhub_mobile
+name: KerjoCurup
 description: Aplikasi penghubung petani dan tenaga kerja di Rejang Lebong.
 publish_to: "none"
 version: 1.0.0+1
