--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -39,6 +39,17 @@
                     android:host="login-callback"
                     android:pathPrefix="/" />
             </intent-filter>
+
+            <!-- Deep Link for Job Sharing (https://kerjocurup.app/jobs/{id}) -->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data
+                    android:scheme="https"
+                    android:host="kerjocurup.app"
+                    android:pathPrefix="/jobs" />
+            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
